[tool.poetry]
name = "coolq_get_admin_plugin"
version = "0.1.0"
description = ""
authors = ["Zhihang-Liu <enterindex@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.7"
nonebot = "^1.4.2"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pefile = "^2019.4.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
